# androidtv_structure

./: README.md  build.gradle  dependencies.gradle  metadata.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: app-values.cpp
app/src/main/java/com/thedung/androidtvstructure/classes/application/: AppApplication.kt  AppConfig.kt
app/src/main/java/com/thedung/androidtvstructure/classes/auth/: AuthenticationHelper.kt  TokenAuthenticationManager.kt  TokenAuthenticator.kt
app/src/main/java/com/thedung/androidtvstructure/classes/bases/: BaseActivity.kt  BaseFragment.kt  BaseLeanbackFragment.kt  BaseRowsFragment.kt  BaseViewModel.kt
app/src/main/java/com/thedung/androidtvstructure/classes/delegates/: ActivityDelegate.kt  ActivityViewBindingDelegate.kt  FragmentDelegate.kt  (+2 more)
app/src/main/java/com/thedung/androidtvstructure/utils/: Functions.kt  GlideApp.kt  LocaleUtils.kt  LogUtil.kt
app/src/main/java/com/thedung/ui/splashscreen/: SplashScreenActivity.kt
app/src/main/res/color/: home_button_background_color_selector.xml  home_button_text_color_selector.xml
app/src/main/res/drawable/: home_button_background.xml  ic_home_view_details.xml  ic_home_view_now.xml
app/src/main/res/layout/: activity_home.xml  activity_splash_screen.xml  fragment_base_rows.xml  fragment_container_base.xml  presenter_home_header.xml
app/src/main/res/values/: attrs.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-sw360dp/: dimens.xml
app/src/main/res/values-sw540dp/: dimens.xml
(+38 files in other folders)
